# vllm-ai_infra

./: .gitignore  README.md  dtc.md  pyproject.toml  代码生成项目开发资料.md  流程图.md  简历介绍.md  自己项目总结.md  部署启动.sh  问题记录.d  面试问答 copy.md  面试问答.md  项目优化建议.md  项目框架.md
docs/: benchmark_matrix.md  development_blueprint.md  diagnostic_platform_interview_guide.md  implementation_path.md  optimization_steps.md
requirements/: vector.txt
scripts/: audit_workflow_args.py  benchmark_vllm_chat.py  benchmark_vllm_concurrent.py  benchmark_vllm_replay.py  build_mineru_index.py  build_template_contracts.py  build_template_family_registry.py  build_template_registry.py  build_vector_index.py  build_workload_replay.py  diagnose_tp2_comm.py  fuse_workflow.py  generate_class_xml_with_llm.py  generate_xml_plan.py  generate_xml_with_llm.py  install_vllm_pip.sh  query_vector_index.py  resolve_audit_report.py  resolve_audit_with_llm.py  run_complete_benchmark.py  run_context_extreme_trials.py  run_context_window_benchmark.py  run_e2e_acceptance.py  run_pipeline.py  run_regression_eval.py  run_system_benchmark.py  run_vllm_tuning_sweep.py  run_workload_pipeline.py  run_workload_regression.py  start_vllm_qwen.sh  start_vllm_qwen_coder_awq.sh
tests/: test_app_workload_api.py  test_audit_resolution.py  test_e2e_acceptance.py  test_evidence_chain.py  test_evidence_phase_b.py  test_flow_excel.py  test_full_knowledge_graph.py  test_graph_aware_xml_selection.py  test_graph_evidence_paths.py  test_graph_phase_c.py  test_graph_rag_retrieval.py  test_llm_xml_generation.py  test_local_index_retrieval.py  (+21 more)
(+83 files in other folders)
